[build-system]
requires = [ "flit_core >=3.2,<4",]
build-backend = "flit_core.buildapi"

[project]
name = "py_ait"
version = "0.0.43"
authors = []
classifiers = [ "License :: OSI Approved :: MIT License",]
dynamic = [ "description",]
dependencies = [ "click >=8.1.7", "huggingface_hub >=0.16.4", "datasets >=2.14.0",]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Documentation = "https://github.com/yuanzhibang-tool/ai-toolbox"
Source = "https://github.com/yuanzhibang-tool/ai-toolbox"

[project.license]
file = "LICENSE"

[project.scripts]
ait-download = "py_ait.hf_download:run"
ait-fork = "py_ait.hf_fork:run"

[tool.flit.sdist]
include = [ "README.md",]
